workloads/flashchat-ui/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: flashchat-ui
  namespace: flashchat
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: flashchat-ui
